using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace ConAppPlayingWithObservablePattern.Interfaces;
public interface IObserver
{
	Task Update();
}
