
classDiagram
    direction TB

    class IObserver {
        <<interface>>
        +Update()
    }

    class IObservable {
        <<interface>>
        +Add(observer: IObserver)
        +Remove(observer: IObserver)
        +Notify()
    }

    class WeatherStation {
        +Add(observer: IObserver)
        +Remove(observer: IObserver)
        +Notify()
    }

    class PhoneDisplay {
        +Update()
    }

    IObservable <|.. WeatherStation
    IObserver <|.. PhoneDisplay
    WeatherStation --> "1..*" IObserver : notifies
